@@ -1,3 +1,14 @@
+2000-07-31  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* util/ntp-genkeys.c: Add stubs to work with ../ntpd/ntp_config.o,
+	start hooking things up.
+
+	* ntpd/ntp_config.c (getconfig): 
+	* ntpd/ntpd.c: Initialize "debug" here, not in ntp_config.c
+
+	* util/Makefile.am (ntp_genkeys_LDADD): Added ../ntpd/ntp_config.o
+	* util/Makefile.am (ntp_genkeys_DEPENDENCIES): Added.
+
 2000-07-30  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: 4.0.99k4
